[package]
name = "biteme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { workspace = true }

serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

clap = "4.1.8"
color-eyre = "0.6.2"
eyre = "0.6.8"
inquire = { version = "0.6.0", features = ["editor", "chrono", "date"] }
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
serde_yaml = "0.9.19"
tracing-subscriber = "0.3.16"
regex = "1.7.1"
